TGL: adding CRTC not allowed without modesets: requested 0x2, affected 0xf (kernel 5.19.3)
This occurs frequently with the Framework laptop: ""11th Gen Intel(R) Core(TM) i7-1165G7 @ 2.80GHz".
This was previously marked as fixed in #4888 (closed) but a number of people in that ticket mention they are still able to reliably reproduce the issue after fix was reported to have landed.
Sep 05 13:07:16 hex kernel: ------------[ cut here ]------------
Sep 05 13:07:16 hex kernel: adding CRTC not allowed without modesets: requested 0x8, affected 0x9
Sep 05 13:07:16 hex kernel: WARNING: CPU: 2 PID: 920 at drivers/gpu/drm/drm_atomic.c:1403 drm_atomic_check_only+0x902/0xa00
Sep 05 13:07:16 hex kernel: Modules linked in: xt_nat xt_tcpudp veth overlay rfcomm snd_seq_dummy snd_hrtimer snd_seq xt_conntrack nft_chain_nat snd_hda_codec_hdmi xt_MASQUERADE nf_nat nf_conntrack_netlink nf_conntrack snd_hda_codec_idt nf_defrag_ipv6 snd_hda_codec_generic nf_defrag_ipv4 ledtrig_audio xt_addrtype nft_compat nf_tables nfnetlink br_netfilter snd_sof_pci_intel_tgl snd_sof_intel_hda_common soundwire_intel soundwire_generic_allocation soundwire_cadence snd_sof_intel_hda snd_sof_pci snd_sof_xtensa_dsp snd_sof hid_sensor_als hid_sensor_trigger snd_sof_utils industrialio_triggered_buffer snd_soc_hdac_hda kfifo_buf snd_hda_ext_core bridge hid_sensor_iio_common snd_soc_acpi_intel_match industrialio hid_sensor_custom snd_soc_acpi stp cros_ec_debugfs cros_ec_sysfs cros_ec_chardev soundwire_bus llc cros_usbpd_logger cros_usbpd_charger cros_usbpd_notify hid_sensor_hub snd_soc_core cros_ec_dev snd_compress ac97_bus snd_pcm_dmaengine mei_pxp intel_ishtp_hid snd_hda_intel iTCO_wdt mei_hdcp bnep
Sep 05 13:07:16 hex kernel: intel_pmc_bxt snd_intel_dspcfg intel_tcc_cooling spi_nor iwlmvm snd_intel_sdw_acpi mtd x86_pkg_temp_thermal ee1004 iTCO_vendor_support intel_powerclamp snd_usb_audio hid_multitouch coretemp ipheth snd_hda_codec snd_usbmidi_lib mac80211 cros_ec_lpcs pmt_telemetry kvm_intel libarc4 pmt_class intel_rapl_msr snd_hda_core wmi_bmof cros_ec snd_rawmidi kvm snd_hwdep snd_seq_device ccm irqbypass iwlwifi snd_pcm intel_cstate intel_uncore pcspkr iwlmei gspca_vc032x snd_timer algif_aead spi_intel_pci psmouse uvcvideo gspca_main snd i2c_i801 mei_me videobuf2_vmalloc des_generic spi_intel i2c_smbus cfg80211 videobuf2_memops soundcore videobuf2_v4l2 mei videobuf2_common libdes r8153_ecm ecb intel_lpss_pci cdc_ether videodev usbnet intel_lpss idma64 algif_skcipher mc r8152 cmac mii md4 algif_hash btusb joydev af_alg btrtl btbcm btintel mousedev btmtk i915 apple_mfi_fastcharge bluetooth ecdh_generic rfkill processor_thermal_device_pci_legacy crc16 intel_ish_ipc processor_thermal_device
Sep 05 13:07:16 hex kernel: drm_buddy intel_ishtp thunderbolt intel_vsec ttm processor_thermal_rfim ucsi_acpi processor_thermal_mbox drm_display_helper typec_ucsi processor_thermal_rapl cec intel_rapl_common typec intel_soc_dts_iosf intel_gtt vfat igen6_edac fat roles wmi int3403_thermal int340x_thermal_zone mac_hid i2c_hid_acpi i2c_hid video int3400_thermal acpi_thermal_rel acpi_pad pkcs8_key_parser dm_multipath sg crypto_user fuse ip_tables x_tables btrfs blake2b_generic libcrc32c crc32c_generic xor raid6_pq dm_crypt cbc encrypted_keys trusted asn1_encoder tee uas usb_storage usbhid dm_mod serio_raw atkbd crct10dif_pclmul libps2 crc32_pclmul vivaldi_fmap tpm_crb crc32c_intel nvme ghash_clmulni_intel aesni_intel crypto_simd xhci_pci tpm_tis cryptd nvme_core xhci_pci_renesas tpm_tis_core i8042 tpm serio rng_core vmd
Sep 05 13:07:16 hex kernel: Unloaded tainted modules: acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 asus_ec_sensors():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1 acpi_cpufreq():1 fjes():1 acpi_cpufreq():1 fjes():1 pcc_cpufreq():1 pcc_cpufreq():1 fjes():1 acpi_cpufreq():1 fjes():1 pcc_cpufreq():1 acpi_cpufreq():1 pcc_cpufreq():1
Sep 05 13:07:16 hex kernel: asus_ec_sensors():1 acpi_cpufreq():1 fjes():1 acpi_cpufreq():1
Sep 05 13:07:16 hex kernel: CPU: 2 PID: 920 Comm: sway Tainted: G W 5.19.3-arch1-1 #1 83cb97ae0c76841ed5ae1e3429386aa2a602dddd
Sep 05 13:07:16 hex kernel: Hardware name: Framework Laptop/FRANBMCP0B, BIOS 03.06 10/18/2021
Sep 05 13:07:16 hex kernel: RIP: 0010:drm_atomic_check_only+0x902/0xa00
Sep 05 13:07:16 hex kernel: Code: 7f 08 48 c7 c2 48 b0 f5 a6 be 10 00 00 00 e8 45 cb 00 00 e9 6d f9 ff ff 8b 74 24 1c 89 da 48 c7 c7 20 b4 f5 a6 e8 bd dc 3f 00 <0f> 0b 31 c0 e9 52 fd ff ff 4d 8b 42 20 41 8b 4a 60 4d 85 c9 74 04
Sep 05 13:07:16 hex kernel: RSP: 0018:ffff9cea00ca3c60 EFLAGS: 00010282
Sep 05 13:07:16 hex kernel: RAX: 0000000000000000 RBX: 0000000000000009 RCX: 0000000000000027
Sep 05 13:07:16 hex kernel: RDX: ffff88ab4faa1668 RSI: 0000000000000001 RDI: ffff88ab4faa1660
Sep 05 13:07:16 hex kernel: RBP: 0000000000000005 R08: 0000000000000000 R09: ffff9cea00ca3ae8
Sep 05 13:07:16 hex kernel: R10: 0000000000000003 R11: ffffffffa76b5360 R12: ffff88a3cd2ba800
Sep 05 13:07:16 hex kernel: R13: 0000000000000000 R14: 0000000000000008 R15: ffff88a485038800
Sep 05 13:07:16 hex kernel: FS: 00007f50ac4e5940(0000) GS:ffff88ab4fa80000(0000) knlGS:0000000000000000
Sep 05 13:07:16 hex kernel: CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
Sep 05 13:07:16 hex kernel: CR2: 00007f4eaa7b0000 CR3: 0000000139d10004 CR4: 0000000000f70ee0
Sep 05 13:07:16 hex kernel: PKRU: 55555554
Sep 05 13:07:16 hex kernel: Call Trace:
Sep 05 13:07:16 hex kernel: <TASK>
Sep 05 13:07:16 hex kernel: drm_atomic_nonblocking_commit+0x17/0x70
Sep 05 13:07:16 hex kernel: drm_mode_atomic_ioctl+0x973/0xb80
Sep 05 13:07:16 hex kernel: ? drm_atomic_set_property+0xb40/0xb40
Sep 05 13:07:16 hex kernel: drm_ioctl_kernel+0xca/0x170
Sep 05 13:07:16 hex kernel: drm_ioctl+0x231/0x410
Sep 05 13:07:16 hex kernel: ? drm_atomic_set_property+0xb40/0xb40
Sep 05 13:07:16 hex kernel: __x64_sys_ioctl+0x91/0xd0
Sep 05 13:07:16 hex kernel: do_syscall_64+0x5c/0x90
Sep 05 13:07:16 hex kernel: ? do_syscall_64+0x6b/0x90
Sep 05 13:07:16 hex kernel: ? do_syscall_64+0x6b/0x90
Sep 05 13:07:16 hex kernel: ? do_syscall_64+0x6b/0x90
Sep 05 13:07:16 hex kernel: entry_SYSCALL_64_after_hwframe+0x63/0xcd
Sep 05 13:07:16 hex kernel: RIP: 0033:0x7f50ad2af9ef
Sep 05 13:07:16 hex kernel: Code: 00 48 89 44 24 18 31 c0 48 8d 44 24 60 c7 04 24 10 00 00 00 48 89 44 24 08 48 8d 44 24 20 48 89 44 24 10 b8 10 00 00 00 0f 05 <89> c2 3d 00 f0 ff ff 77 18 48 8b 44 24 18 64 48 2b 04 25 28 00 00
Sep 05 13:07:16 hex kernel: RSP: 002b:00007fff80d15740 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
Sep 05 13:07:16 hex kernel: RAX: ffffffffffffffda RBX: 0000557f62190640 RCX: 00007f50ad2af9ef
Sep 05 13:07:16 hex kernel: RDX: 00007fff80d157e0 RSI: 00000000c03864bc RDI: 000000000000000b
Sep 05 13:07:16 hex kernel: RBP: 00007fff80d157e0 R08: 0000000000000003 R09: 0000000000000003
Sep 05 13:07:16 hex kernel: R10: 0000557f61888010 R11: 0000000000000246 R12: 00000000c03864bc
Sep 05 13:07:16 hex kernel: R13: 000000000000000b R14: 0000557f6296c2c0 R15: 0000557f62adbe30
Sep 05 13:07:16 hex kernel: </TASK>
Sep 05 13:07:16 hex kernel: ---[ end trace 0000000000000000 ]---
I only see this with my USB C Dock plugged in.
It's a Cable Matters dock, Model No 201054, the name is:
"USB-C Dual 4k DisplayPort Docking Station with with 80W PD"
When the dock is plugged in I get the above in the logs every few seconds, whether a monitor is plugged into the dock or not.